--- a/ThreeDAdMachine/ThreeDAdMachine/View/EditDeviceInfo.xaml
+++ b/ThreeDAdMachine/ThreeDAdMachine/View/EditDeviceInfo.xaml
@@ -2,13 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModel="clr-namespace:ThreeDAdMachine.ViewModel"
              mc:Ignorable="d" FontSize="16"
-             d:DesignHeight="300" d:DesignWidth="600">
+             d:DesignHeight="300" d:DesignWidth="600"
+             d:DataContext="{d:DesignInstance Type=viewModel:DevicesAndConnectViewModel}">
     <Grid>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" 
                     Orientation="Horizontal"
-                    DataContext="{Binding CurrentDevice}">
+                    DataContext="{Binding ProcessingDevice}">
             <WrapPanel Margin="10">
                 <TextBlock Text="名称:" Margin="0 0 15 1"/>
                 <TextBox Text="{Binding Name, FallbackValue=未命名,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
@@ -17,7 +19,7 @@
             <WrapPanel Margin="10">
                 <TextBlock Text="设备ip:" Margin="0 0 15 1"/>
                 <TextBox VerticalAlignment="Center" MinWidth="130" MaxHeight="23"
-                         Text="{Binding IPAddress, FallbackValue=192.168.0.0,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                         Text="{Binding IpAddress, FallbackValue=192.168.0.0,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
             </WrapPanel>
             <WrapPanel Margin="10">
                 <TextBlock Text="端口号:" Margin="0 0 15 1"/>
